replace isBlank with StringUtils.isBlank